<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/hey_there"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textSize="48sp"
        android:textStyle="bold"
        android:color="@color/white_smoke"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/welcome"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textSize="40sp"
        android:textStyle="normal"
        android:color="@color/white_smoke"/>



    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/email_placeholder"
        android:textColorHint="@color/gray_stroke"
        android:layout_marginTop="45dp"
        android:padding="20dp"
        android:textColor="@color/white_smoke"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/edit_field"
        android:inputType="textEmailAddress" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ageEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:hint="@string/password_placeholder"
        android:textColorHint="@color/gray_stroke"
        android:padding="20dp"
        android:textColor="@color/white_smoke"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/edit_field"
        android:inputType="textPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/button"
        android:padding="18dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:focusable="true"
        android:text="@string/btn_signin" />

</LinearLayout>